Fix the issue on safari

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -50,8 +50,8 @@
     border-radius: 50%;
     background: #483D8B;
     position: fixed;
-    bottom: 30px;
-    right: 30px;
+    bottom: 1.0875rem;
+    right: 1.0875rem;
     cursor: pointer;
     text-align: center;
     box-shadow: 0px 2px 5px #666;
@@ -59,12 +59,12 @@
   }
 
   .floating-menu .sign {
+    border-radius: 50%;
     color: white;
     padding: 0;
     margin: 0;
-    line-height: 47px;
+    line-height: 55px;
     font-size: 38px;
-    font-family: 'Roboto';
     font-weight: 300;
     display: block;
     height: 100%;
@@ -75,6 +75,7 @@
   }
 
   .floating-menu[data-menu='open'] {
+    /* transform: scale(1.1, 1.1) translate3d(0, 0, 0) rotate(45deg); */
     transform: scale(1.1, 1.1) translate3d(0, 0, 0) rotate(45deg);
   }
 }
